--- a/01. Source/Blockchain_MyEtherWallet/Blockchain_MyEtherWallet/Views/Shared/_Layout.cshtml
+++ b/01. Source/Blockchain_MyEtherWallet/Blockchain_MyEtherWallet/Views/Shared/_Layout.cshtml
@@ -20,9 +20,13 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Trang chủ", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Tạo ví", "NewWallet", "Home")</li>
+                    <li>@Html.ActionLink("Tài khoản", "AccountDetails", "Home")</li>
+                    <li>@Html.ActionLink("Giao dịch", "Transfer", "Home")</li>
+                    <li>@Html.ActionLink("Lịch sử", "History", "Home")</li>
+                    <li>@Html.ActionLink("Thông tin", "About", "Home")</li>
+                    <li>@Html.ActionLink("Đăng nhập", "Login", "Home")</li>
                 </ul>
             </div>
         </div>
