--- a/01. Source/Blockchain_MyEtherWallet/Blockchain_MyEtherWallet/Views/Home/Details.cshtml
+++ b/01. Source/Blockchain_MyEtherWallet/Blockchain_MyEtherWallet/Views/Home/Details.cshtml
@@ -1,18 +1,18 @@
 ﻿@{
-    ViewBag.Title = "Tài khoản";
+    ViewBag.Title = "Account details";
 }
 <h2>@ViewBag.Title</h2>
 
 @if (ViewBag.Account == "")
 {
-    <p style="color:red;">Bạn chưa đăng nhập!</p>
+    <p style="color:red;">You are not logged in</p>
     using (@Html.BeginForm("Login", "Home"))
     {
-        <button type="submit" class="btn btn-primary">Đăng nhập</button>
+        <button type="submit" class="btn btn-primary">Log in</button>
     }
 }
 else
 {
-    <h3>Xin chào : <b style="color:red;">@ViewBag.Account</b></h3>
-    <h4><b>Tài khoản : @ViewBag.Coins (VCOIN)</b></h4>
+    <h3>Welcome : <b style="color:red;">@ViewBag.Account</b></h3>
+    <h4><b>Account : @ViewBag.Coins (coins)</b></h4>
 }
