--- a/01. Source/Blockchain_MyEtherWallet/Blockchain_MyEtherWallet/Views/Home/History.cshtml
+++ b/01. Source/Blockchain_MyEtherWallet/Blockchain_MyEtherWallet/Views/Home/History.cshtml
@@ -1,8 +1,7 @@
 ﻿@{
-    ViewBag.Title = "Lịch sử";
+    ViewBag.Title = "Transfer history";
 }
 <h2>@ViewBag.Title</h2>
-<h3 style="color:red;">Lịch sử giao dịch</h3>
 
 <div class="jumbotron">
     @foreach (var item in ViewBag.AllTransaction)
