--- a/01. Source/Blockchain_MyEtherWallet/Blockchain_MyEtherWallet/Views/Home/Login.cshtml
+++ b/01. Source/Blockchain_MyEtherWallet/Blockchain_MyEtherWallet/Views/Home/Login.cshtml
@@ -1,43 +1,40 @@
 ﻿@model Blockchain_MyEtherWallet.Models.User
 
 @{
-    ViewBag.Title = "Đăng nhập";
+    ViewBag.Title = "Login";
 }
 <h2>@ViewBag.Title</h2>
 
 @if (ViewBag.Account != "")
 {
-    <p style="color:red;">Bạn đã đăng nhập!</p>
+    <p style="color:red;">You are logged in</p>
     using (@Html.BeginForm("Logout", "Home", FormMethod.Post))
     {
         @Html.AntiForgeryToken()
-        <button type="submit" class="btn btn-primary">Đăng xuất</button>
+        <button type="submit" class="btn btn-primary">Log out</button>
     }
 }
 else
 {
     using (@Html.BeginForm("CheckLogin", "Home", FormMethod.Post))
     {
-        <!-- Ref : https://hoanguyenit.com/aspnet-mvc5-login-and-register.html -->
 
         @Html.AntiForgeryToken()
 
         <h5 style="color:red;">@ViewBag.Alert</h5>
         <div class="form-group">
-            <label for="exampleInputEmail1">Tên đăng nhập</label>
-            <!--<input type="text" class="form-control" id="username" aria-describedby="emailHelp" placeholder="Tên đăng nhập">-->
-            @Html.TextBoxFor(s => s.Email, "", new { @type = "email", @class = "form-control", @placeholder = "Tên đăng nhập" })
+            <label for="exampleInputEmail1">Email</label>
+            @Html.TextBoxFor(s => s.Email, "", new { @type = "email", @class = "form-control", @placeholder = "Email" })
         </div>
         <div class="form-group">
-            <label for="exampleInputPassword1">Mật khẩu</label>
-            <!--<input type="password" class="form-control" id="password" placeholder="Mật khẩu">-->
-            @Html.TextBoxFor(s => s.Password, "", new { @type = "password", @class = "form-control", @placeholder = "Tên đăng nhập" })
+            <label for="exampleInputPassword1">Password</label>
+            @Html.TextBoxFor(s => s.Password, "", new { @type = "password", @class = "form-control", @placeholder = "Password" })
         </div>
         <div class="form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Nhớ tên đăng nhập</label>
+            <label class="form-check-label" for="exampleCheck1">Remember me</label>
         </div>
-        <button type="submit" class="btn btn-primary">Đăng nhập</button>
+        <button type="submit" class="btn btn-primary">Login</button>
     }
 }
 
