--- a/01. Source/Blockchain_MyEtherWallet/Blockchain_MyEtherWallet/Views/Home/NewWallet.cshtml
+++ b/01. Source/Blockchain_MyEtherWallet/Blockchain_MyEtherWallet/Views/Home/NewWallet.cshtml
@@ -1,36 +1,35 @@
 ﻿@model Blockchain_MyEtherWallet.Models.User
 
 @{
-    ViewBag.Title = "Tạo ví";
+    ViewBag.Title = "Create New Wallet";
 }
 <h2>@ViewBag.Title</h2>
 
 @if (ViewBag.Account != "")
 {
-    <p style="color:red;">Bạn đã đăng nhập! Vui lòng đăng xuất nếu muốn tạo ví mới</p>
+    <p style="color:red;">You are logged in, please kindly log out to create new wallet</p>
     using (@Html.BeginForm("Logout", "Home", FormMethod.Post))
     {
         @Html.AntiForgeryToken()
-        <button type="submit" class="btn btn-primary">Đăng xuất</button>
+        <button type="submit" class="btn btn-primary">Log out</button>
     }
 }
 else
 {
     using (@Html.BeginForm("CreateWallet", "Home", FormMethod.Post))
     {
-        <!-- Ref : https://hoanguyenit.com/aspnet-mvc5-login-and-register.html -->
 
         @Html.AntiForgeryToken()
 
         <h5 style="color:red;">@ViewBag.Alert</h5>
         <div class="form-group">
-            <label for="exampleInputEmail1">Tên ví</label>
-            @Html.TextBoxFor(s => s.Email, "", new { @type = "text", @class = "form-control", @placeholder = "Tên ví" })
+            <label for="exampleInputEmail1">Email</label>
+            @Html.TextBoxFor(s => s.Email, "", new { @type = "email", @class = "form-control", @placeholder = "Email" })
         </div>
         <div class="form-group">
-            <label for="exampleInputPassword1">Mật khẩu</label>
-            @Html.TextBoxFor(s => s.Password, "", new { @type = "password", @class = "form-control", @placeholder = "Tên đăng nhập" })
+            <label for="exampleInputPassword1">Password</label>
+            @Html.TextBoxFor(s => s.Password, "", new { @type = "password", @class = "form-control", @placeholder = "Password" })
         </div>
-        <button type="submit" class="btn btn-primary">Tạo ví</button>
+        <button type="submit" class="btn btn-primary">Create</button>
     }
 }
